Updated The Order + added Front Page

--- a/result/1/index.html
+++ b/result/1/index.html
@@ -10,8 +10,8 @@
   <div class="grid"></div>
   <div class="links">
   	<h1>Variations on a Theme (Theme)</h1>
-  	<a href='../0/index.html'><< Previous</a>
-  	<a href="../1/index.html">|| VOAT ||</a>
+  	
+  	<a href="../../index.html">|| VOAT ||</a>
   	<a href='../2/index.html'>Next >></a>
   </div>
   <div class="hidden row"></div>
