--- a/result/13/index.html
+++ b/result/13/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-  <title>K. C.</title>
+  <title>A. P.</title>
   <script src="../../js/jquery.min.js"></script>
   <script src="../../js/init.js"></script>
   <link rel="stylesheet" type="text/css" href="../../css/general.css">
   <link rel="stylesheet" type="text/css" href="../../css/styles.css">
 </head>
-<body class="boxy">
+<body class="diamond">
   <div class="grid"></div>
   <div class="links">
-  	<h1>K. C.</h1>
+  	<h1>A. P.</h1>
   	<a href='../12/index.html'><< Previous</a>
-  	<a href="../1/index.html">|| VOAT ||</a>
+  	<a href="../../index.html">|| VOAT ||</a>
   	<a href='../14/index.html'>Next >></a>
   </div>
   <div class="hidden row"></div>
@@ -19,7 +19,7 @@
     <div></div>
     <div></div>
   </div>
-  <div class="hidden color-class-1">20, 20, 160</div>
-  <div class="hidden color-class-2">10, 100, 100</div>
+  <div class="hidden color-class-1">0, 50, 50</div>
+  <div class="hidden color-class-2">50, 110, 250</div>
 </body>
 </html>
