--- a/result/15/index.html
+++ b/result/15/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-  <title>E. C. </title>
+  <title>Z. W.</title>
   <script src="../../js/jquery.min.js"></script>
   <script src="../../js/init.js"></script>
   <link rel="stylesheet" type="text/css" href="../../css/general.css">
   <link rel="stylesheet" type="text/css" href="../../css/styles.css">
 </head>
-<body class="boxish">
+<body class="tangent">
   <div class="grid"></div>
   <div class="links">
-  	<h1>E. C. </h1>
+  	<h1>Z. W.</h1>
   	<a href='../14/index.html'><< Previous</a>
-  	<a href="../1/index.html">|| VOAT ||</a>
+  	<a href="../../index.html">|| VOAT ||</a>
   	<a href='../16/index.html'>Next >></a>
   </div>
   <div class="hidden row"></div>
@@ -19,7 +19,7 @@
     <div></div>
     <div></div>
   </div>
-  <div class="hidden color-class-1">90, 170, 60</div>
-  <div class="hidden color-class-2">200, 190, 190</div>
+  <div class="hidden color-class-1">0, 30, 220</div>
+  <div class="hidden color-class-2">70, 70, 100</div>
 </body>
 </html>
