--- a/result/16/index.html
+++ b/result/16/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-  <title>A. B.</title>
+  <title>I. C.</title>
   <script src="../../js/jquery.min.js"></script>
   <script src="../../js/init.js"></script>
   <link rel="stylesheet" type="text/css" href="../../css/general.css">
   <link rel="stylesheet" type="text/css" href="../../css/styles.css">
 </head>
-<body class="diva">
+<body class="sour">
   <div class="grid"></div>
   <div class="links">
-  	<h1>A. B.</h1>
+  	<h1>I. C.</h1>
   	<a href='../15/index.html'><< Previous</a>
-  	<a href="../1/index.html">|| VOAT ||</a>
+  	<a href="../../index.html">|| VOAT ||</a>
   	<a href='../17/index.html'>Next >></a>
   </div>
   <div class="hidden row"></div>
@@ -19,7 +19,7 @@
     <div></div>
     <div></div>
   </div>
-  <div class="hidden color-class-1">240, 180, 190</div>
-  <div class="hidden color-class-2">140, 0, 80</div>
+  <div class="hidden color-class-1">0, 150, 210</div>
+  <div class="hidden color-class-2">190, 250, 240</div>
 </body>
 </html>
