--- a/result/2/index.html
+++ b/result/2/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-  <title>B. S.</title>
+  <title>A. T.</title>
   <script src="../../js/jquery.min.js"></script>
   <script src="../../js/init.js"></script>
   <link rel="stylesheet" type="text/css" href="../../css/general.css">
   <link rel="stylesheet" type="text/css" href="../../css/styles.css">
 </head>
-<body class="alamo">
+<body class="maui-vert">
   <div class="grid"></div>
   <div class="links">
-  	<h1>B. S.</h1>
+  	<h1>A. T.</h1>
   	<a href='../1/index.html'><< Previous</a>
-  	<a href="../1/index.html">|| VOAT ||</a>
+  	<a href="../../index.html">|| VOAT ||</a>
   	<a href='../3/index.html'>Next >></a>
   </div>
   <div class="hidden row"></div>
@@ -19,7 +19,7 @@
     <div></div>
     <div></div>
   </div>
-  <div class="hidden color-class-1">150, 60, 10</div>
-  <div class="hidden color-class-2">230, 50, 30</div>
+  <div class="hidden color-class-1">250, 190, 10</div>
+  <div class="hidden color-class-2">80, 60, 10</div>
 </body>
 </html>
