--- a/result/3/index.html
+++ b/result/3/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-  <title>E. D.</title>
+  <title>E. C. </title>
   <script src="../../js/jquery.min.js"></script>
   <script src="../../js/init.js"></script>
   <link rel="stylesheet" type="text/css" href="../../css/general.css">
   <link rel="stylesheet" type="text/css" href="../../css/styles.css">
 </head>
-<body class="savory">
+<body class="boxish">
   <div class="grid"></div>
   <div class="links">
-  	<h1>E. D.</h1>
+  	<h1>E. C. </h1>
   	<a href='../2/index.html'><< Previous</a>
-  	<a href="../1/index.html">|| VOAT ||</a>
+  	<a href="../../index.html">|| VOAT ||</a>
   	<a href='../4/index.html'>Next >></a>
   </div>
   <div class="hidden row"></div>
@@ -19,7 +19,7 @@
     <div></div>
     <div></div>
   </div>
-  <div class="hidden color-class-1">0, 250, 250</div>
-  <div class="hidden color-class-2">80, 40, 180</div>
+  <div class="hidden color-class-1">90, 170, 60</div>
+  <div class="hidden color-class-2">200, 190, 190</div>
 </body>
 </html>
