--- a/result/9/index.html
+++ b/result/9/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-  <title>A. T.</title>
+  <title>N. M.</title>
   <script src="../../js/jquery.min.js"></script>
   <script src="../../js/init.js"></script>
   <link rel="stylesheet" type="text/css" href="../../css/general.css">
   <link rel="stylesheet" type="text/css" href="../../css/styles.css">
 </head>
-<body class="maui-vert">
+<body class="movement">
   <div class="grid"></div>
   <div class="links">
-  	<h1>A. T.</h1>
+  	<h1>N. M.</h1>
   	<a href='../8/index.html'><< Previous</a>
-  	<a href="../1/index.html">|| VOAT ||</a>
+  	<a href="../../index.html">|| VOAT ||</a>
   	<a href='../10/index.html'>Next >></a>
   </div>
   <div class="hidden row"></div>
@@ -19,7 +19,7 @@
     <div></div>
     <div></div>
   </div>
-  <div class="hidden color-class-1">250, 190, 10</div>
-  <div class="hidden color-class-2">80, 60, 10</div>
+  <div class="hidden color-class-1">60, 10, 150</div>
+  <div class="hidden color-class-2">40, 30, 30</div>
 </body>
 </html>
