--- a/template.html
+++ b/template.html
@@ -11,7 +11,7 @@
   <div class="links">
   	<h1>DISPLAYNAME</h1>
   	PREVIOUSLINK
-  	<a href="../1/index.html">|| VOAT ||</a>
+  	<a href="../../index.html">|| VOAT ||</a>
   	NEXTLINK
   </div>
   <div class="hidden row"></div>
