--- a/result/12/index.html
+++ b/result/12/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-  <title>G. W.</title>
+  <title>E. C.</title>
   <script src="../../js/jquery.min.js"></script>
   <script src="../../js/init.js"></script>
   <link rel="stylesheet" type="text/css" href="../../css/general.css">
   <link rel="stylesheet" type="text/css" href="../../css/styles.css">
 </head>
-<body class="rejoinder">
+<body class="pitri">
   <div class="grid"></div>
   <div class="links">
-  	<h1>G. W.</h1>
+  	<h1>E. C.</h1>
   	<a href='../11/index.html'><< Previous</a>
-  	<a href="../1/index.html">|| VOAT ||</a>
+  	<a href="../../index.html">|| VOAT ||</a>
   	<a href='../13/index.html'>Next >></a>
   </div>
   <div class="hidden row"></div>
@@ -19,7 +19,7 @@
     <div></div>
     <div></div>
   </div>
-  <div class="hidden color-class-1">255, 190, 0</div>
-  <div class="hidden color-class-2">0, 150, 90</div>
+  <div class="hidden color-class-1">180, 10, 0</div>
+  <div class="hidden color-class-2">250, 150, 0</div>
 </body>
 </html>
