--- a/result/14/index.html
+++ b/result/14/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-  <title>A. P.</title>
+  <title>B. S.</title>
   <script src="../../js/jquery.min.js"></script>
   <script src="../../js/init.js"></script>
   <link rel="stylesheet" type="text/css" href="../../css/general.css">
   <link rel="stylesheet" type="text/css" href="../../css/styles.css">
 </head>
-<body class="diamond">
+<body class="alamo">
   <div class="grid"></div>
   <div class="links">
-  	<h1>A. P.</h1>
+  	<h1>B. S.</h1>
   	<a href='../13/index.html'><< Previous</a>
-  	<a href="../1/index.html">|| VOAT ||</a>
+  	<a href="../../index.html">|| VOAT ||</a>
   	<a href='../15/index.html'>Next >></a>
   </div>
   <div class="hidden row"></div>
@@ -19,7 +19,7 @@
     <div></div>
     <div></div>
   </div>
-  <div class="hidden color-class-1">0, 50, 50</div>
-  <div class="hidden color-class-2">50, 110, 250</div>
+  <div class="hidden color-class-1">150, 60, 10</div>
+  <div class="hidden color-class-2">230, 50, 30</div>
 </body>
 </html>
