--- a/result/19/index.html
+++ b/result/19/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-  <title>A. K.</title>
+  <title>E. D.</title>
   <script src="../../js/jquery.min.js"></script>
   <script src="../../js/init.js"></script>
   <link rel="stylesheet" type="text/css" href="../../css/general.css">
   <link rel="stylesheet" type="text/css" href="../../css/styles.css">
 </head>
-<body class="sane">
+<body class="savory">
   <div class="grid"></div>
   <div class="links">
-  	<h1>A. K.</h1>
+  	<h1>E. D.</h1>
   	<a href='../18/index.html'><< Previous</a>
-  	<a href="../1/index.html">|| VOAT ||</a>
+  	<a href="../../index.html">|| VOAT ||</a>
   	
   </div>
   <div class="hidden row"></div>
@@ -19,7 +19,7 @@
     <div></div>
     <div></div>
   </div>
-  <div class="hidden color-class-1">120, 140, 190</div>
-  <div class="hidden color-class-2">100, 110, 80</div>
+  <div class="hidden color-class-1">0, 250, 250</div>
+  <div class="hidden color-class-2">80, 40, 180</div>
 </body>
 </html>
