--- a/result/5/index.html
+++ b/result/5/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-  <title>Z. W.</title>
+  <title>F. W.</title>
   <script src="../../js/jquery.min.js"></script>
   <script src="../../js/init.js"></script>
   <link rel="stylesheet" type="text/css" href="../../css/general.css">
   <link rel="stylesheet" type="text/css" href="../../css/styles.css">
 </head>
-<body class="tangent">
+<body class="plumes">
   <div class="grid"></div>
   <div class="links">
-  	<h1>Z. W.</h1>
+  	<h1>F. W.</h1>
   	<a href='../4/index.html'><< Previous</a>
-  	<a href="../1/index.html">|| VOAT ||</a>
+  	<a href="../../index.html">|| VOAT ||</a>
   	<a href='../6/index.html'>Next >></a>
   </div>
   <div class="hidden row"></div>
@@ -19,7 +19,7 @@
     <div></div>
     <div></div>
   </div>
-  <div class="hidden color-class-1">0, 30, 220</div>
-  <div class="hidden color-class-2">70, 70, 100</div>
+  <div class="hidden color-class-1">210, 50, 50</div>
+  <div class="hidden color-class-2">240, 230, 110</div>
 </body>
 </html>
