--- a/result/6/index.html
+++ b/result/6/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-  <title>Z. B.</title>
+  <title>Z. W.</title>
   <script src="../../js/jquery.min.js"></script>
   <script src="../../js/init.js"></script>
   <link rel="stylesheet" type="text/css" href="../../css/general.css">
   <link rel="stylesheet" type="text/css" href="../../css/styles.css">
 </head>
-<body class="zebra">
+<body class="madmen">
   <div class="grid"></div>
   <div class="links">
-  	<h1>Z. B.</h1>
+  	<h1>Z. W.</h1>
   	<a href='../5/index.html'><< Previous</a>
-  	<a href="../1/index.html">|| VOAT ||</a>
+  	<a href="../../index.html">|| VOAT ||</a>
   	<a href='../7/index.html'>Next >></a>
   </div>
   <div class="hidden row"></div>
@@ -19,7 +19,7 @@
     <div></div>
     <div></div>
   </div>
-  <div class="hidden color-class-1">150, 70, 250</div>
-  <div class="hidden color-class-2">30, 10, 115</div>
+  <div class="hidden color-class-1">50, 40, 40</div>
+  <div class="hidden color-class-2">210, 220, 220</div>
 </body>
 </html>
