--- a/result/7/index.html
+++ b/result/7/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-  <title>G. W.</title>
+  <title>A. B.</title>
   <script src="../../js/jquery.min.js"></script>
   <script src="../../js/init.js"></script>
   <link rel="stylesheet" type="text/css" href="../../css/general.css">
   <link rel="stylesheet" type="text/css" href="../../css/styles.css">
 </head>
-<body class="print">
+<body class="diva">
   <div class="grid"></div>
   <div class="links">
-  	<h1>G. W.</h1>
+  	<h1>A. B.</h1>
   	<a href='../6/index.html'><< Previous</a>
-  	<a href="../1/index.html">|| VOAT ||</a>
+  	<a href="../../index.html">|| VOAT ||</a>
   	<a href='../8/index.html'>Next >></a>
   </div>
   <div class="hidden row"></div>
@@ -19,7 +19,7 @@
     <div></div>
     <div></div>
   </div>
-  <div class="hidden color-class-1">30, 20, 130</div>
-  <div class="hidden color-class-2">90, 160, 250</div>
+  <div class="hidden color-class-1">240, 180, 190</div>
+  <div class="hidden color-class-2">140, 0, 80</div>
 </body>
 </html>
