--- a/result/8/index.html
+++ b/result/8/index.html
@@ -11,7 +11,7 @@
   <div class="links">
   	<h1>L. B. </h1>
   	<a href='../7/index.html'><< Previous</a>
-  	<a href="../1/index.html">|| VOAT ||</a>
+  	<a href="../../index.html">|| VOAT ||</a>
   	<a href='../9/index.html'>Next >></a>
   </div>
   <div class="hidden row"></div>
