Adds CNAME and updates intro page

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <link rel="stylesheet" type="text/css" href="css/landing.css">
 </head>
 <body>
-  <h1>Variations on a Theme</h1>
+  <h1>CSS - Variations on a Theme</h1>
   <h3><a href="http://www.gradybward.com">Grady Ward</a></h3>
   <p>
-  	The building block of a square, with half-circles at the corners, is not new.
-  	It is not exciting, it is comprehensible and understood.
+    A square, with half-circles at the corners, is not new.
+  	It is not exciting. It is comprehensible and easy to express.
   </p>
   <br>
   <div class="cell">
@@ -17,22 +17,23 @@
   </div>
   <br>
   <p>
-  	I picked it up a week ago after having seen it hidden within a pattern on a wall.
-  	However, while solving the graph algorithm buried within the space filling task, 
-  	(to see if it could be used as an interview question), I was surprised at how simply it could be expressed.
+  	Thus, I was surprised to find that this simple unit was the driver behind a beautiful and intricate wallpaper in our offices.
+  	The space filling algorithm that covered the simplicity of this unit happens to be a classic connected component graph problem. 
+  	To see if it could be used as an interview question, I coded it up and was surprised at how simply it could be expressed.
   </p>
   <p>
     I was also surprised at how even small mistakes in my code or styles led to wildly disparate
-    final products. Once I had fixed my errors, the variations formed by adding 2-3 css classes amazed me.
+    final products. Once I had fixed my errors, I became fascinated with the havoc 2-3 lines of CSS could wreak on the visual result.
   </p>
   <p>
   	Edward Elgar's Enigma Variations are one of my favorite pieces of music to listen to and play.
-  	Each expresses a theme in the style of someone who was loved by the composer.
-  	In their commonality, we find a musical theme of shared humanity.
+  	Each expresses a common musical theme in the style of someone who was loved by the composer.
+  	In their commonality, we find a shared interconnectivity.
   	In their contrasts, we see vibrant personality.
   </p>
   <p>
-    I have tried to find new ways of using this old format to portray the personalities of folks that I care for.
+    With this as inspiration, I have experimented with expressing the personalities of folks that I care for with a few lines of CSS.
+    I hope you enjoy the results!
   </p>
   <br>
   <h3><a class="start" href="result/1/index.html">Start</a></h3>
