Merge: Editor Branch

--- a/index.html
+++ b/index.html
@@ -1,41 +1,54 @@
 <html>
 <head>
-  <title>Variations on a Theme</title>
-  <link rel="stylesheet" type="text/css" href="css/landing.css">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <title>VOAT</title>
 </head>
 <body>
-  <h1>CSS - Variations on a Theme</h1>
-  <h3><a href="http://www.gradybward.com">Grady Ward</a></h3>
-  <p>
-    A square, with half-circles at the corners, is not new.
-  	It is not exciting. It is comprehensible and easy to express.
-  </p>
-  <br>
-  <div class="cell">
-  	<div></div>
-  	<div></div>
-  </div>
-  <br>
-  <p>
-  	Thus, I was surprised to find that this simple unit was the driver behind a beautiful and intricate wallpaper in our offices.
-  	The space filling algorithm that covered the simplicity of this unit happens to be a classic connected component graph problem. 
-  	To see if it could be used as an interview question, I coded it up and was surprised at how simply it could be expressed.
-  </p>
-  <p>
-    I was also surprised at how even small mistakes in my code or styles led to wildly disparate
-    final products. Once I had fixed my errors, I became fascinated with the havoc 2-3 lines of CSS could wreak on the visual result.
-  </p>
-  <p>
-  	Edward Elgar's Enigma Variations are one of my favorite pieces of music to listen to and play.
-  	Each expresses a common musical theme in the style of someone who was loved by the composer.
-  	In their commonality, we find a shared interconnectivity.
-  	In their contrasts, we see vibrant personality.
-  </p>
-  <p>
-    With this as inspiration, I have experimented with expressing the personalities of folks that I care for with a few lines of CSS.
-    I hope you enjoy the results!
-  </p>
-  <br>
-  <h3><a class="start" href="result/1/index.html">Start</a></h3>
+  <h1>Variations on a Theme (VOAT)</h1>
+  <h2>Pattern, Elgar, Stella, and CSS.</h2>
+  <nav>
+    <a href="../about">About</a>
+    <a href="../editor">Editor</a>
+    <a href="../library">Library</a>
+  </nav>
+  <style>
+* {
+  font-family: Arial,sans-serif;
+}
+
+h1 {
+  margin: 20vh 0 5rem;
+}
+
+h2 {
+  margin: 2.5rem
+}
+
+nav > a {
+  border: 1px solid gray;
+  text-decoration: none;
+  color: black;
+  padding: .5rem 1rem;
+  margin: .25rem;
+  border-radius: .5rem;
+  font-size: 1.5rem;
+}
+
+nav > a:hover {
+  border: 1px solid black;
+  color: black;
+  background: lightgray;
+}
+
+body {
+  text-align: center;
+}
+</style>
 </body>
 </html>
