--- a/legacy/template.html
+++ b/legacy/template.html
@@ -15,9 +15,13 @@
   	NEXTLINK
   </div>
   <div class="hidden row"></div>
-  <div class="hidden cell">
-    <div></div>
-    <div></div>
+  <div class="hidden cell c">
+    <div class="element a"></div>
+    <div class="element b"></div>
+  </div>
+  <div class="hidden cell rot f">
+    <div class="element d"></div>
+    <div class="element e"></div>
   </div>
   <div class="hidden color-class-1">COLOR1</div>
   <div class="hidden color-class-2">COLOR2</div>
