Adds About Page

--- a/legacy/template.html
+++ b/legacy/template.html
@@ -19,7 +19,7 @@
     <div class="element a"></div>
     <div class="element b"></div>
   </div>
-  <div class="hidden cell rot f">
+  <div class="hidden cell f">
     <div class="element d"></div>
     <div class="element e"></div>
   </div>
