--- a/about/index.html
+++ b/about/index.html
@@ -56,7 +56,7 @@
     When you've created something that you're find interesting or beautiful, click "Share". This will prompt you for a name for your creation, for your name, and then add it to a global library of patterns. If instead you want to see what others have made, click into <a href="../library">Library</a> and browse others' creations. If you see one you like, or want to modify, click on it and you can edit it further!
   </p>
   <p>
-    Feel free to use these patterns in any way you see fit. Each is licensed under the MIT license. Make it your desktop background, your linked-in profile header. Print it on a blanket, design it on to running shorts. In short: take a few minutes to make some art that speaks to you, that blends repetition and creativity, share it with the world, and make the world a bit more interesting.
+    Feel free to use these patterns in any way you see fit. Each pattern is licensed under a Creative Commons Attribution 4.0 International License. This means you are free to use it for any purpose, so long as you attribute the creator and the site. Make it your desktop background, your linked-in profile header. Print it on a blanket, design it on to running shorts. In short: take a few minutes to make some art that speaks to you, that blends repetition and creativity, share it with others, and make the world a bit more colorful.
   </p>
 </div>
 <style>
